--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,8 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          work_in_root_file_dir: ./paper/paper.tex
+          root_file: ./paper/paper.tex
+	  work_in_root_file_dir: true
       - name: Upload PDF file
         uses: softprops/action-gh-release@v2
         with:
