--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,8 @@ jobs:
         with:
           root_file: ./paper/paper.tex
           work_in_root_file_dir: true
-      - name: Upload PDF file
-        uses: softprops/action-gh-release@v2
+      - name: Upload PDF fie
+        uses: actions/upload-artifact@v4
         with:
-          files: ./paper/paper.pdf
+          name: PDF
+          path: ./paper/paper.pdf
