--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,8 +11,12 @@ jobs:
         with:
           root_file: ./paper/paper.tex
           work_in_root_file_dir: true
-      - name: Upload PDF fie
-        uses: actions/upload-artifact@v4
+      - name: Upload PDF file
+        uses: softprops/action-gh-release@v2
         with:
-          name: PDF
-          path: ./paper/paper.pdf
+          files: ./paper/paper.pdf
+      # - name: Upload PDF fie
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: GSM-PDF
+      #     path: ./paper/paper.pdf
