--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,8 +13,11 @@ jobs:
           work_in_root_file_dir: true
       - name: Upload PDF file
         uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
+          name: GSM-paper
           files: ./paper/paper.pdf
+          draft: true
       # - name: Upload PDF fie
       #   uses: actions/upload-artifact@v4
       #   with:
