--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,5 +1,13 @@
 name: Build LaTeX document
-on: [push]
+
+on:
+  push:
+    tags:
+      - v*
+
+permissions:
+  contents: write
+
 jobs:
   build_latex:
     runs-on: ubuntu-latest
@@ -17,8 +25,3 @@ jobs:
         with:
           name: GSM-paper
           files: ./paper/paper.pdf
-      # - name: Upload PDF fie
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: GSM-PDF
-      #     path: ./paper/paper.pdf
