--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ GenerativeTopographicMapping = "110c1e60-17ba-4aeb-8cee-444277a6d160"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+JLSO = "9da8a3cd-07a3-59c0-a743-3fdc52c30d11"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
